...
            .heightIn(min = 48.dp)
            .toggleable(
                value = enabled,
                role = Role.Switch,
                onValueChange = onEnabledChange
            )
            .semantics { contentDescription = "Try our new UI!" }
            .padding(start = 8.dp),
        verticalAlignment = Alignment.CenterVertically
    ) {
        Text(
            text = "New UI",
            style = MaterialTheme.typography.labelSmall,
            color = appColors.textSecondary,
            maxLines = 1
        )
        Switch(
            checked = enabled,
...
